--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -2,12 +2,27 @@
   color: white;
   background-color: rgb(40,40,50);
   padding: 4px 25px;
-  // border-radius: 12px;
   margin-right: 1rem;
+  border: 1px solid rgb(40,40,50);
   &:hover {
     text-decoration: none;
     background-color: white;
     color:rgb(40,40,50);
     border: 1px solid #E67E22;
+  }
+}
+
+
+.btn-white {
+  color: rgb(40,40,50);;
+  background-color: white;
+  padding: 4px 25px;
+  margin-right: 1rem;
+  border: 1px solid #E67E22;
+  &:hover {
+    text-decoration: none;
+    background-color: rgb(40,40,50);
+    color: white;
+    border: 1px solid rgb(40,40,50);
   }
 }
