--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -2,9 +2,17 @@
   position: relative;
   // margin-bottom: 3rem;
   margin-top: 5rem;
-  box-shadow: 0 0 15px rgba(30,30,30,0.2);
-  border: 4px solid white;
+  padding: 2px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  // border: 4px solid white;
+  &:hover {
+    border: 1px solid #E67E22;
+  }
 }
+
+// .hover-card {
+//   border: 1px solid #E67E22;
+// }
 
 #category {
   position: absolute;
