--- a/app/assets/stylesheets/components/_article.scss
+++ b/app/assets/stylesheets/components/_article.scss
@@ -1,13 +1,12 @@
 .show-article {
-  background-color: rgb(245,245,245);
+  // background-color: rgb(245,245,245);
 }
 .article {
   width: 700px;
   margin: 20px auto;
   background-color: white;
   padding: 3rem 2rem;
-  border-radius: 24px;
-  box-shadow: 0 0 10px rgba(20,20,20,0.4);
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
   text-align: justify;
 }
 
