--- a/app/assets/stylesheets/pages/_club.scss
+++ b/app/assets/stylesheets/pages/_club.scss
@@ -7,6 +7,7 @@
   text-align: justify;
   padding-right: 50px;
   font-weight: lighter;
+  font-size: 14px;
 }
 
 .president {
@@ -51,7 +52,7 @@
 
 .card-product img {
   height: 100%;
-  width: 120px;
+  width: 140px;
   object-fit: cover;
 }
 
