--- a/app/views/pages/joueurs.html.erb
+++ b/app/views/pages/joueurs.html.erb
@@ -1,1 +1,18 @@
-<h1>Les joueurs du club</h1>
+<div class="container joueurs">
+  <div class="row">
+    <div class="col-sm-12 col-md-6 col-lg-3">
+      <!-- card players -->
+      <div class="card-players">
+        <div class="d-flex justify-content-center align-items-center my-3">
+          <div class="players-illustration">
+            <h6>GH</h6>
+          </div>
+        </div>
+        <p class="name">GERARD HOCHET</p>
+        <p class="text-center">ELO: 1672</p>
+        <p class="text-center classement">class: 42ème</p>
+      </div>
+    </div>
+
+  </div>
+</div>
